Version 0.1.3 (2016-mm-dd)
  * SIMD enhancements: SSE, AVX, Neon.
  * Improve support for clang, ARM, and cross-compilation.
  * Provide env. var. override of runtime parameters.
  * N.B. some build configuration name changes; see INSTALL.

Version 0.1.2 (2015-09-05)
  * Fix conversion failure when I/O types differ but I/O rates don't.
  * Fix #defines for interpolation order selection.
  * Fix ineffectual SOXR_MINIMUM_PHASE and SOXR_INTERMEDIATE_PHASE in
    soxr_quality_spec recipe.
  * Fix soxr_delay() returning a negative number after end-of-input has been
    indicated.
  * Fix crash when using soxr_process() after calling soxr_clear().
  * Be more POSIX compliant w.r.t. errno in the examples; fixes erroneous
    reporting of errors on FreeBSD.
  * Quality improvement for variable-rate.
  * Various fixes/improvements to build/tests/documentation.

Version 0.1.1 (2013-03-03)
  * Minor fixes/improvements to build/tests.
  * Fix crash (e.g. with k3b) when null error pointer passed to src_create (lsr
    bindings only).
  * Fix broken resampling in many cases with SIMD and anti_aliasing_pc < 100.
  * For clarity, renamed and slightly changed usage of three parameters in
    soxr_quality_spec_t (ABI compatible, API incompatible).  An application not
    setting these parameters directly need make no change; otherwise, changes
    should be made per the following example (as shown, compatibility with both
    old/new APIs is maintained).  See also the comments on these parameters in
    soxr.h.  N.B. ABI compatibility with the 0.1.0 API may be removed in a
    future release.
      #if !defined SOXR_VERSION /* Deprecated, 0.1.0 API */
        q_spec.phase = minimum_phase? 0 : 50;
        q_spec.bw_pc = cutoff * 100;
        q_spec.anti_aliasing_pc = anti_aliasing * 100;
      #else /* 0.1.1 API */                            Explanation:
        q_spec.phase_response = minimum_phase? 0 : 50;  Renamed.