@@ -1,4 +1,4 @@
-SoX Resampler Library       Copyright (c) 2007-16 robs@users.sourceforge.net
+SoX Resampler Library       Copyright (c) 2007-18 robs@users.sourceforge.net
 
 This library is free software; you can redistribute it and/or modify it
 under the terms of the GNU Lesser General Public License as published by
@@ -11,7 +11,7 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser
 General Public License for more details.
 
 You should have received a copy of the GNU Lesser General Public License
-along with this library; if not, see <http://www.gnu.org/licenses/>.
+along with this library; if not, see <https://www.gnu.org/licenses/>.
 
 
 Notes
