@@ -1,4 +1,4 @@
-SoX Resampler Library       Copyright (c) 2007-16 robs@users.sourceforge.net
+SoX Resampler Library       Copyright (c) 2007-18 robs@users.sourceforge.net
 
 The SoX Resampler library `libsoxr' performs one-dimensional sample-rate
 conversion -- it may be used, for example, to resample PCM-encoded audio.
@@ -46,7 +46,7 @@ size configuration parameters may be used to reduce this figure).
 For build and installation instructions, see the file `INSTALL'; for
 copyright and licensing information, see the file `LICENCE'.
 
-For support and new versions, see http://soxr.sourceforge.net
+For support and new versions, see https://soxr.sourceforge.net
 ________
 ¹ For example, multi-channel resampling can utilise multiple CPU-cores.
 ² Bit-perfect within practical occupied-bandwidth limits.
