@@ -1,6 +1,6 @@
 #!/bin/sh
 set -e
-# SoX Resampler Library       Copyright (c) 2007-13 robs@users.sourceforge.net
+# SoX Resampler Library       Copyright (c) 2007-18 robs@users.sourceforge.net
 # Licence for this file: LGPL v2.1                  See LICENCE for details.
 
 # Makes the distribution tarball
@@ -10,6 +10,3 @@ rm -rf Release
 ./go -j4
 cd Release
 make package_source
-gunzip *.tar.gz
-xz *.tar
-echo *.xz
