@@ -1,4 +1,4 @@
-/* SoX Resampler Library       Copyright (c) 2007-16 robs@users.sourceforge.net
+/* SoX Resampler Library      Copyright (c) 2007-18 robs@users.sourceforge.net
  *
  * This library is free software; you can redistribute it and/or modify it
  * under the terms of the GNU Lesser General Public License as published by
@@ -173,7 +173,7 @@ SOXR size_t /*odone*/ soxr_output(/* Resample and output a block of data.*/
 SOXR soxr_error_t soxr_error(soxr_t);   /* Query error status. */
 SOXR size_t   * soxr_num_clips(soxr_t); /* Query int. clip counter (for R/W). */
 SOXR double     soxr_delay(soxr_t);  /* Query current delay in output samples.*/
-SOXR char const * soxr_engine(soxr_t p); /* Query resampling engine name. */
+SOXR char const * soxr_engine(soxr_t);  /* Query resampling engine name. */
 
 SOXR soxr_error_t soxr_clear(soxr_t); /* Ready for fresh signal, same config. */
 SOXR void         soxr_delete(soxr_t);  /* Free resources. */
