@@ -2,7 +2,10 @@ Version 0.1.3 (2016-mm-dd)
   * SIMD enhancements: SSE, AVX, Neon.
   * Improve support for clang, ARM, and cross-compilation.
   * Provide env. var. override of runtime parameters.
-  * N.B. some build configuration name changes; see INSTALL.
+  * Build fix re cmake variables AVCODEC_INCLUDE_DIRS & AVUTIL_INCLUDE_DIRS.
+  * N.B. build options WITH_SINGLE_PRECISION, WITH_DOUBLE_PRECISION & WITH_SIMD
+    have been removed; replacement options are detailed in INSTALL, `Resampling
+    engines'.
 
 Version 0.1.2 (2015-09-05)
   * Fix conversion failure when I/O types differ but I/O rates don't.
